Actions we want actions (#37)
* use correct Logger

* replace static Environment with GameContext

* refactor MiniAdventure

* upgrade to use JDK25 features

* upgrade for Spring 4 compliance